Remove server dom and uglify

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="public/styles.css" />
   </head>
-  <body></body>
+  <body>
+    {{app}} {{scripts}}
+  </body>
 </html>
