--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/styles.css" />
+    {{scripts}}
   </head>
   <body>
-    {{app}} {{scripts}}
+    {{app}}
   </body>
 </html>
