--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="/styles.css" />
-    {{scripts}}
+    {{head}}
   </head>
   <body>
-    {{app}}
+    {{app}} {{scripts}}
   </body>
 </html>
